# gemini-kafka-producer

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
gemini_kafka_producer/: producer.py
